Fix: Shift changes

--- a/src/app/forms/components/schedular/shift-chart/shift-chart.component.scss
+++ b/src/app/forms/components/schedular/shift-chart/shift-chart.component.scss
@@ -1,4 +1,88 @@
 @import '../../../../../scss/colors.scss';
 
 #shift-container {
+  ::ng-deep .center {
+    text-align: center;
+  }
+
+  ::ng-deep .form-padding {
+    padding-bottom: 30px;
+  }
+  ::ng-deep .table-wrapper {
+    overflow-x: auto;
+    white-space: nowrap;
+    width: 100%;
+  }
+  .table-wrapper tr td {
+    border: 1px solid #e8e8e8;
+    color: white;
+    cursor: pointer;
+  }
+  .table-wrapper table {
+    border-collapse: collapse;
+  }
+
+  .main-content {
+    display: flex;
+    justify-content: space-between;
+    background-color: #e1f1ff;
+    border-left: 2px solid blue;
+    height: 100%;
+  }
+
+  .table-wrapper tr:first-child td {
+    border: 0;
+    color: black;
+  }
+
+  .table-wrapper tr td:hover {
+    background-color: rgb(238 238 238);
+    color: black;
+  }
+
+  .main-content .left {
+    color: black;
+  }
+  .left-margin {
+    margin: 0 12px;
+  }
+
+  .dashboard-titles {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 100%;
+    line-height: 19px;
+    color: #212121;
+    margin-left: 10px;
+  }
+
+  .more-icon {
+    position: relative;
+    left: 10px;
+    background: none;
+    border: none;
+    z-index: 10;
+    .more-icon-no-color {
+      color: #757575;
+    }
+    ::ng-deep svg {
+      width: 17px !important;
+      height: 17px !important;
+      margin: 15px !important;
+    }
+  }
+  .slot {
+    height: 50px;
+    width: 100px;
+    text-align: center;
+  }
+  .pr-20 {
+    padding-right: 20px;
+  }
+  .pl-15 {
+    padding-left: 15px;
+  }
+  ::ng-deep .slotBackground {
+    background-color: #e1f1ff !important;
+  }
 }
